<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Crear">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/cabecera"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@android:color/holo_blue_dark"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <TextView
                android:id="@+id/txtTituloCrear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/txtTituloCrear"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <ScrollView
            android:id="@id/contenidoCrear"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/cabecera"
            app:layout_constraintBottom_toTopOf="@+id/linearBottomButtons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:id="@+id/contenidoCrear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="202dp">

                <TextView
                    android:id="@+id/txtTituloReceta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/txtTituloReceta"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/material_dynamic_neutral90"
                    android:ems="20"
                    android:inputType="text"
                    android:hint="@string/txtHintTitulo"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/txtIngrediente"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/material_dynamic_neutral_variant90"
                    android:ems="20"
                    android:gravity="start|top"
                    android:hint="@string/txtHintIngrediente"
                    android:inputType="textMultiLine"
                    android:textAlignment="viewStart"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/txtInstrucciones"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextTextMultiLine2"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/material_dynamic_neutral90"
                    android:ems="20"
                    android:gravity="start|top"
                    android:hint="@string/txtHintInstrucciones"
                    android:inputType="textMultiLine"
                    android:textAlignment="viewStart"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/txtDificultadReceta"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioDificultad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp">

                    <RadioButton
                        android:id="@+id/radioFacil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Fácil" />

                    <RadioButton
                        android:id="@+id/radioMedio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medio" />

                    <RadioButton
                        android:id="@+id/radioDificil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Difícil" />
                </RadioGroup>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/txtPorcionReceta"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextNumber"
                    android:layout_width="270dp"
                    android:layout_height="35dp"
                    android:ems="2"
                    android:inputType="number"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/material_dynamic_neutral_variant90"
                    android:layout_marginEnd="10dp"
                    android:textColorHint="@android:color/darker_gray"
                    android:hint="@string/hintPorcionReceta"/>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/txtFoto"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnSeleccionarImagen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    android:text="@string/txtHintfoto"
                    app:icon="@drawable/camera" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearBottomButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contenidoCrear"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="599dp">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_light"
                android:fontFamily="sans-serif-black"
                android:text="@string/btnSubirReceta"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_light"
                android:fontFamily="sans-serif-black"
                android:text="@string/btnCancelarReceta"
                android:textSize="20dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
